# legaldiff-ai-

./: .env.example  .gitignore  ADR.json  CLAUDE.md  Dockerfile  LICENSE  MANUAL-TEST.md  PLAN.md  README.md  docker-compose.yml  pendiente.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: format.sh  run-related-tests.sh
data/test_contracts/: README.md
gateway/: .env.example  ADR.json  README.md  config.yaml  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial_analysis_records.py
src/: auth.py  config.py  database.py  image_parser.py  logging_config.py  main.py  models.py
src/agents/: contextualization_agent.py  extraction_agent.py
src/prompts/: contextualization_agent.txt  extraction_agent.txt  image_parser.txt
tests/: conftest.py  test_agents.py  test_image_parser.py  test_main.py  test_models.py
